--- a/app.json
+++ b/app.json
@@ -1,30 +1,42 @@
 {
-  "expo": {
-    "name": "lifeline",
-    "slug": "lifeline",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
-  }
+	"expo": {
+		"name": "lifeline",
+		"slug": "lifeline-app",
+		"scheme": "expo-app",
+		"version": "1.0.0",
+		"orientation": "portrait",
+		"icon": "./assets/AppLogo.png",
+		"userInterfaceStyle": "light",
+		"splash": {
+			"image": "./assets/splash.png",
+			"resizeMode": "contain",
+			"backgroundColor": "#ffffff"
+		},
+		"assetBundlePatterns": ["**/*"],
+		"ios": {
+			"supportsTablet": true
+		},
+		"android": {
+			"package": "com.theidealism.lifeline",
+			"versionCode": 2,
+			"adaptiveIcon": {
+				"foregroundImage": "./assets/AppLogo.png",
+				"backgroundColor": "#ffffff"
+			}
+		},
+		"web": {
+			"favicon": "./assets/favicon.png",
+			"output": "server",
+			"bundler": "metro"
+		},
+		"plugins": ["expo-router"],
+		"extra": {
+			"router": {
+				"origin": false
+			},
+			"eas": {
+				"projectId": "75d62be8-dd7d-42c6-9552-346a5cee15d7"
+			}
+		}
+	}
 }
