--- a/package.json
+++ b/package.json
@@ -1,23 +1,38 @@
 {
-  "name": "lifeline",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~50.0.14",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.6"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
-  },
-  "private": true
+	"name": "lifeline",
+	"version": "1.0.0",
+	"main": "expo-router/entry",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web"
+	},
+	"dependencies": {
+		"@expo/metro-runtime": "~3.1.3",
+		"@react-native-community/checkbox": "^0.5.17",
+		"@react-native-community/datetimepicker": "7.6.1",
+		"expo": "~50.0.15",
+		"expo-checkbox": "~2.7.0",
+		"expo-constants": "~15.4.5",
+		"expo-linking": "~6.2.2",
+		"expo-radio-button": "^1.0.8",
+		"expo-router": "~3.4.8",
+		"expo-status-bar": "~1.11.1",
+		"nativewind": "^2.0.11",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-native": "0.73.6",
+		"react-native-safe-area-context": "4.8.2",
+		"react-native-screens": "~3.29.0",
+		"react-native-svg": "14.1.0",
+		"react-native-web": "~0.19.6"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.0",
+		"@types/react": "~18.2.45",
+		"tailwindcss": "3.3.2",
+		"typescript": "^5.1.3"
+	},
+	"private": true
 }
